- added layout and content

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,47 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+
+
+<div id="hero" class="hero hero--beach">
+  <div class="hero__container">
+    <span class="hero__label hero__label--right hero__label--cursive">Kristin and Corey's Wedding</span>
+    <span class="hero__label hero__label--right">October 8th, 2016</span>
+  </div>
+</div>
+
+<div class="venue">
+  <div class="venue__container">
+    <div class="venue__item">
+      <span class="item__title">The Wedding</span>
+      <p>The wedding will be held at the Palm Terrace at the Hyatt in Sarasota, FL.</p>
+      <p class="item__title--center">
+        <span class="item__title--bold">Hyatt Regency Sarasota</span><br />
+        1000 Boulevard of the Arts<br />
+        Sarasota, Florida 34236
+      </p>
+    </div>
+    <div class="venue__item">
+      <span class="item__title">The Reception</span>
+      <p>The reception will be adjacent to the wedding location in the Boathouse.</p>
+    </div>
+  </div>
+</div>
+
+<div class="venue">
+  <div class="venue__container">
+    <div class="venue__item">
+      <span class="item__title">Itinerary</span>
+      <p>
+        4:00 - Arrival<br />
+        4:30 - Ceremony<br />
+        5:00 - Coctail Hour<br />
+        6:00 - Reception
+      </p>
+    </div>
+    <div class="venue__item">
+      <span class="item__title">Accommodations</span>
+      <p>The reception will be adjacent to the wedding location in the Boathouse.</p>
+    </div>
+  </div>
+</div>
+
+
+<!-- accommodations, etc -->
