--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>KristinandcoreyCom</title>
+  <title>Kristin and Corey's Wedding</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body>
 
+  <header class="header">
+    <div class="header__container">
+      <div class="header__logo">
+        <div class="logo logo--medium logo--white">
+          <a href="/">Meet the McClellands</a>
+        </div>
+      </div>
+      <!--<div class="header__nav">
+        <div class="nav nav--medium nav--white">
+          <ul>
+            <li class="nav__item"><a href="#">About Us</a></li>
+            <li class="nav__item"><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>-->
+  </header>
+
 <%= yield %>
+
+  <footer class="footer">
+    <!--
+    <ul class="footerNav">
+      <li class="footerNav__item">About Us</li>
+      <li class="footerNav__item">Contact Us</li>
+    </ul>
+    <p>Copyright 2016 &copy; Agile Reaction LLC.  All Rights Reserved.</p>
+  -->
+
+
+  </footer>
 
 </body>
 </html>
