--- a/app/assets/stylesheets/partials/venue.scss
+++ b/app/assets/stylesheets/partials/venue.scss
@@ -9,7 +9,7 @@
   margin-top: 1rem;
   font-family: 'arial';
   font-size: 12;
-  height: 160px;
+  height: 225px;
 
   img {
     display: block;
@@ -69,4 +69,10 @@
 
 .item__title--center {
   text-align: center;
+}
+
+.slick--small{
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
 }
