--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<div id="hero" class="hero hero--beach">
+<div id="hero" class="hero hero--keywest">
   <div class="hero__container">
     <span class="hero__label hero__label--right hero__label--cursive">Kristin and Corey's Wedding</span>
     <span class="hero__label hero__label--right">October 8th, 2016</span>
@@ -22,6 +22,7 @@
     <div class="venue__item">
       <span class="item__title">The Reception</span>
       <p>The reception will be adjacent to the wedding location in the Boathouse.</p>
+      <p>Expect dinner and dancing into the night.</p>
     </div>
   </div>
 </div>
@@ -34,8 +35,9 @@
         4:00 - Arrival<br />
         4:30 - Ceremony<br />
         5:00 - Coctail Hour<br />
-        6:00 - Reception
+        6:00 - Reception<br />
       </div>
+      <p>Dress in typical wedding attire.</p>
     </div>
     <div class="venue__item">
       <span class="item__title">Accommodations</span>
@@ -85,12 +87,18 @@
   </div>
 </div>
 
+<div class="registry">
+  <div class="registry__container">
+    <span>Registry Info Coming Soon</span>
+  </div>
+</div>
+
 
 <script type="text/javascript">
   $(document).ready(function(){
     $('.slick--small').slick({
       autoplay: true,
-      dots: true
+      arrows: true
     });
   });
 </script>
