--- a/app/assets/stylesheets/partials/venue.scss
+++ b/app/assets/stylesheets/partials/venue.scss
@@ -24,8 +24,18 @@
 
   p {
     margin-top: 1rem;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    @include mq(600px){
+      padding-left: 60px;
+      padding-right: 60px;
+    }
+
+    @include mq(900px){
+      padding-left: 60px;
+      padding-right: 60px;
+    }
   }
 
   a{
@@ -75,4 +85,9 @@
   width: 250px;
   margin-left: auto;
   margin-right: auto;
+
+  p {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
