--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,86 +1,102 @@
 
 
-<div id="hero" class="hero hero--keywest">
+<div id="hero" class="hero hero--bikes">
   <div class="hero__container">
     <span class="hero__label hero__label--right hero__label--cursive">Kristin and Corey's Wedding</span>
     <span class="hero__label hero__label--right">October 8th, 2016</span>
   </div>
 </div>
 
-<div class="venue">
-  <div class="venue__container">
-    <div class="venue__item">
-      <span class="item__title">The Wedding</span>
-      <p>The wedding will be held at the Palm Terrace at the Hyatt in Sarasota, FL.</p>
-      <p class="item__title--center">
-        <span class="item__title--bold">Hyatt Regency Sarasota</span><br />
-        1000 Boulevard of the Arts<br />
-        Sarasota, Florida 34236<br />
-        <a href="https://www.google.com/maps/place/Hyatt+Regency+Sarasota/@27.3411547,-82.55136,17z/data=!3m1!4b1!4m2!3m1!1s0x88c3400f978617d7:0xe9738e14c7abdd0b">Google Maps</a>
-      </p>
-    </div>
-    <div class="venue__item">
-      <span class="item__title">The Reception</span>
-      <p>The reception will be adjacent to the wedding location in the Boathouse.</p>
-      <p>Expect dinner and dancing into the night.</p>
+<div class="wrapper">
+  <div class="quote quote--big">
+    <span>The Adventure Begins</span>
+  </div>
+</div>
+
+<div class="wrapper">
+  <div class="venue">
+    <div class="venue__container">
+      <div class="venue__item">
+        <span class="item__title">The Wedding</span>
+        <p>The wedding will be held at the Palm Terrace at the Hyatt in Sarasota, FL.</p>
+        <p class="item__title--center">
+          <span class="item__title--bold">Hyatt Regency Sarasota</span><br />
+          1000 Boulevard of the Arts<br />
+          Sarasota, Florida 34236<br />
+          <a href="https://www.google.com/maps/place/Hyatt+Regency+Sarasota/@27.3411547,-82.55136,17z/data=!3m1!4b1!4m2!3m1!1s0x88c3400f978617d7:0xe9738e14c7abdd0b">Google Maps</a>
+        </p>
+      </div>
+      <div class="venue__item">
+        <%= image_tag("love.png", :alt => "Love") %>
+      </div>
+      <div class="venue__item">
+        <%= image_tag("tri2.jpg", :alt => "Kristin and Corey") %>
+      </div>
+      <div class="venue__item">
+        <span class="item__title">The Reception</span>
+        <p>The reception will be adjacent to the wedding location in the Boathouse.</p>
+        <p>Expect dinner and dancing into the night.</p>
+      </div>
     </div>
   </div>
 </div>
 
-<div class="venue">
-  <div class="venue__container">
-    <div class="venue__item">
-      <span class="item__title">Itinerary</span>
-      <div class="item__schedule">
-        4:00 - Arrival<br />
-        4:30 - Ceremony<br />
-        5:00 - Coctail Hour<br />
-        6:00 - Reception<br />
+<div class="wrapper">
+  <div class="venue">
+    <div class="venue__container">
+      <div class="venue__item">
+        <span class="item__title">Itinerary</span>
+        <div class="item__schedule">
+          4:00 - Arrival<br />
+          4:30 - Ceremony<br />
+          5:00 - Coctail Hour<br />
+          6:00 - Reception<br />
+        </div>
+        <p>Dress in typical wedding attire.</p>
       </div>
-      <p>Dress in typical wedding attire.</p>
-    </div>
-    <div class="venue__item">
-      <span class="item__title">Accommodations</span>
-      <p>The wedding party will be staying at the Hyatt, but other nearby options include The Lido Beach Resort, The Hampton Inn, and the Hotel Indigo.</p>
-      <div class="slick--small">
-        <div>
-          <p class="item__title--center">
-            <span class="item__title--bold">Hyatt Regency Sarasota</span><br />
-            1000 Boulevard of the Arts<br />
-            Sarasota, FL 34236<br />
-            <a href="http://sarasota.hyatt.com/en/hotel/home.html">website</a><br />
-            <a href="https://www.google.com/maps/place/Hyatt+Regency+Sarasota/@27.3411547,-82.55136,17z/data=!3m1!4b1!4m2!3m1!1s0x88c3400f978617d7:0xe9738e14c7abdd0b">Google Maps</a>
-          </p>
-        </div>
-        <div>
-          <p class="item__title--center">
-            <span class="item__title--bold">Lido Beach Resort</span><br />
-            700 Ben Franklin Dr<br />
-            Sarasota, FL 34236<br />
-            866.306.5457<br />
-            <a href="http://www.lidobeachresort.com/">website</a><br />
-            <a href="https://www.google.com/maps/place/Lido+Beach+Resort/@27.310252,-82.5772777,17z/data=!3m1!4b1!4m2!3m1!1s0x88c36a88dcc5e883:0xc8c218ae84109d34">Google Maps</a>
-          </p>
-        </div>
-        <div>
-          <p class="item__title--center">
-            <span class="item__title--bold">Hampton Inn</span><br />
-            975 University Pkwy<br />
-            Sarasota, FL 34243<br />
-            941.355.8140<br />
-            <a href="http://hamptoninn3.hilton.com/en/hotels/florida/hampton-inn-and-suites-sarasota-bradenton-airport-SRQATHX/index.html">website</a><br />
-            <a href="https://www.google.com/maps/place/Hampton+Inn+%26+Suites+Sarasota%2FBradenton-Airport/@27.3823859,-82.5515288,15z/data=!4m2!3m1!1s0x0:0x91aef299e07762cb">Google Maps</a>
-          </p>
-        </div>
-        <div>
-          <p class="item__title--center">
-            <span class="item__title--bold">Hotel Indigo</span><br />
-            1223 Blvd of the Arts<br />
-            Sarasota, FL 34236<br />
-            941.487.3800<br />
-            <a href="http://www.srqhotel.com/">website</a><br />
-            <a href="https://www.google.com/maps/place/Hotel+Indigo+Sarasota/@27.341446,-82.5485147,17z/data=!3m1!4b1!4m2!3m1!1s0x88c3400e64fd43fb:0x508122d0eb5259ef">Google Maps</a>
-          </p>
+      <div class="venue__item">
+        <span class="item__title">Accommodations</span>
+        <p>The wedding party will be staying at the Hyatt, but other nearby options include The Lido Beach Resort, The Hampton Inn, and the Hotel Indigo.</p>
+        <div class="slick--small">
+          <div>
+            <p class="item__title--center">
+              <span class="item__title--bold">Hyatt Regency Sarasota</span><br />
+              1000 Boulevard of the Arts<br />
+              Sarasota, FL 34236<br />
+              <a href="http://sarasota.hyatt.com/en/hotel/home.html">website</a><br />
+              <a href="https://www.google.com/maps/place/Hyatt+Regency+Sarasota/@27.3411547,-82.55136,17z/data=!3m1!4b1!4m2!3m1!1s0x88c3400f978617d7:0xe9738e14c7abdd0b">Google Maps</a>
+            </p>
+          </div>
+          <div>
+            <p class="item__title--center">
+              <span class="item__title--bold">Lido Beach Resort</span><br />
+              700 Ben Franklin Dr<br />
+              Sarasota, FL 34236<br />
+              866.306.5457<br />
+              <a href="http://www.lidobeachresort.com/">website</a><br />
+              <a href="https://www.google.com/maps/place/Lido+Beach+Resort/@27.310252,-82.5772777,17z/data=!3m1!4b1!4m2!3m1!1s0x88c36a88dcc5e883:0xc8c218ae84109d34">Google Maps</a>
+            </p>
+          </div>
+          <div>
+            <p class="item__title--center">
+              <span class="item__title--bold">Hampton Inn</span><br />
+              975 University Pkwy<br />
+              Sarasota, FL 34243<br />
+              941.355.8140<br />
+              <a href="http://hamptoninn3.hilton.com/en/hotels/florida/hampton-inn-and-suites-sarasota-bradenton-airport-SRQATHX/index.html">website</a><br />
+              <a href="https://www.google.com/maps/place/Hampton+Inn+%26+Suites+Sarasota%2FBradenton-Airport/@27.3823859,-82.5515288,15z/data=!4m2!3m1!1s0x0:0x91aef299e07762cb">Google Maps</a>
+            </p>
+          </div>
+          <div>
+            <p class="item__title--center">
+              <span class="item__title--bold">Hotel Indigo</span><br />
+              1223 Blvd of the Arts<br />
+              Sarasota, FL 34236<br />
+              941.487.3800<br />
+              <a href="http://www.srqhotel.com/">website</a><br />
+              <a href="https://www.google.com/maps/place/Hotel+Indigo+Sarasota/@27.341446,-82.5485147,17z/data=!3m1!4b1!4m2!3m1!1s0x88c3400e64fd43fb:0x508122d0eb5259ef">Google Maps</a>
+            </p>
+          </div>
         </div>
       </div>
     </div>
