--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="header__container">
       <div class="header__logo">
-        <div class="logo logo--medium logo--white">
+        <div class="logo logo--large logo--white">
           <a href="/">Meet the McClellands</a>
         </div>
       </div>
