--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,8 @@
  @import "slick-carousel/slick/slick.scss";
   @import "slick-carousel/slick/slick-theme.css";
 @import "partials/hero";
+
+body {
+  //background: rgb(22,72,150);
+
+}
