--- a/app/assets/stylesheets/partials/hero.scss
+++ b/app/assets/stylesheets/partials/hero.scss
@@ -62,6 +62,12 @@
   background-size: cover;
 }
 
+.hero--bikes {
+  background-image: image-url('bikes.jpg');
+  background-position: center center;
+  background-size: cover;
+}
+
 .hero--keywest {
   background-image: image-url('keywest.jpg');
   background-position: center center;
