--- a/app/assets/stylesheets/partials/logo.scss
+++ b/app/assets/stylesheets/partials/logo.scss
@@ -14,6 +14,12 @@
   font-weight: bold;
 }
 
+.logo--large {
+  font-size: 3em;
+  font-weight: bold;
+}
+
+
 .logo--white {
   a {
     color: white;
