- revamped the ui

--- a/app/assets/stylesheets/partials/hero.scss
+++ b/app/assets/stylesheets/partials/hero.scss
@@ -63,7 +63,7 @@
 }
 
 .hero--bikes {
-  background-image: image-url('bikes.jpg');
+  //background: rgb(241,240,221);
   background-position: center center;
   background-size: cover;
 }
