--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,20 +17,15 @@
   <header class="header">
     <div class="header__container">
       <div class="header__logo">
-        <div class="logo logo--large logo--white">
-          <a href="/">Meet the McClellands</a>
-        </div>
+
       </div>
-      <!--<div class="header__nav">
-        <div class="nav nav--medium nav--white">
-          <ul>
-            <li class="nav__item"><a href="#">About Us</a></li>
-            <li class="nav__item"><a href="#">Contact Us</a></li>
-          </ul>
-        </div>
+      <div class="header__title">
+        <span>10 · 8 · 2016</span>
       </div>
-    </div>-->
+    </div>
   </header>
+
+  <hr class="hr--small" />
 
 <%= yield %>
 
