--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,9 @@
   @import "slick-carousel/slick/slick-theme.css";
 @import "partials/hero";
 
+
+
 body {
   //background: rgb(22,72,150);
-
+  background: rgb(241,244,231);
 }
