--- a/app/assets/stylesheets/partials/header.scss
+++ b/app/assets/stylesheets/partials/header.scss
@@ -1,21 +1,34 @@
 @import "grid";
+@import "variables";
+
 
 .header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 40px;
-  background: rgb(22,72,150);
-  background: rgba(100,100,100,0.0);
+  @include row();
+
 }
 
 .header__container{
-  @include row();
-
+  @include col();
+  height: 200px;
   position: relative;
+  overflow: hidden;
+  text-align: right;
+  background-image: image-url('biketitle.jpg');
+  background-position: left bottom;
+  background-repeat: no-repeat;
 }
 
-.header__logo {
-  @include col(1);
+.header__title {
+  position: relative;
+
+
+  font-family: $font;
+  font-size: 3em;
+  color: $textColor;
+
+  @include mq(600px){
+    font-size: 6em;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
