--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,6 +22,15 @@
   </div>
 </div>
 
+<div class="wrapper">
+  <div class="registry registry--top">
+    <span class="registry__title">Registries</span>
+    <div class="registry__container">
+      
+    </div>
+  </div>
+</div>
+
 
 
 <script type="text/javascript">
