--- a/app/assets/stylesheets/partials/registry.scss
+++ b/app/assets/stylesheets/partials/registry.scss
@@ -1,16 +1,27 @@
 @import "grid";
-@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
+@import "variables";
 
 .registry {
   @include col();
 
-  font-family: 'Dancing Script', cursive;
-  font-size: 1.5em;
   text-align: center;
-  background: rgb(10,186,181);
 }
 
 .registry__container{
+  background-color: $textBackground;
+  height: 200px;
+  border-radius: 10px;
+  background-image: image-url('flower.png');
+  background-position: right bottom;
+  background-repeat: no-repeat;
+}
+
+.registry__title{
+  font-family: $font;
+  font-size: 1em;
+}
+
+
+.registry--top{
   margin-top: 20px;
-  margin-bottom: 40px;
 }
