--- a/app/assets/stylesheets/partials/variables.scss
+++ b/app/assets/stylesheets/partials/variables.scss
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:700);
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
 
 $textColor: #3e3530;
 $textBackground: #dbdecf;
