--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,11 @@ body {
   //background: rgb(22,72,150);
   background: rgb(241,244,231);
 }
+
+a {
+    color: #0047AB;
+}
+
+a:visited {
+    color: #0047AB;
+}
