--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,15 +11,44 @@
   <div class="schedule">
     <span class="schedule__title">On the Day</span>
     <div class="schedule__container">
-
+        <p class="schedule__subTitle">The Wedding - 4:30 PM</p>
+        <p class="schedule__text">The wedding will be held at the Hyatt in Sarasota, FL.</p>
+        <p class="schedule__subTitle">Cocktail Hour - 5 PM</p>
+        <p class="schedule__text">The Cocktail Hour will commence at the end of the ceremony.  It will be located next to the Tiki Bar by the pool, adjacent to the ceremony location.</p>
+        <p class="schedule__subTitle">The Reception - 6 PM</p>
+        <p class="schedule__text">The reception will be in the old Boat House restaurant.</p>
     </div>
   </div>
   <div class="info">
     <span class="info__title">About Us</span>
     <div class="info__container">
-
+        <p class="info__subTitle">How They Met</p>
+        <p class="info__text">Kristin and Corey met on a bike ride on New Years Eve in 2013.</p>
     </div>
   </div>
+</div>
+
+<div class="wrapper">
+    <div class="info info--top">
+        <span class="info__title">Accomodations</span>
+        <div class="info__container">
+            <p class="info__subTitle">Hyatt Regency Sarasota</p>
+            <p class="info__text"><a href="https://resweb.passkey.com/go/LyonsMcClellandWedding">Register</a> at the Hyatt.  Limited rooms available.</p>
+            <p class="info__subTitle">Hotel Indigo Sarasota</p>
+            <p class="info__text"><a href="http://www.srqhotel.com/">Register</a></p>
+            <p class="info__subTitle">Lido Beach Resort</p>
+            <p class="info__text"><a href="http://www.lidobeachresort.com/">Register</a></p>
+        </div>
+    </div>
+    <div class="info info--top">
+        <span class="info__title">Points of Interest</span>
+        <div class="info__container">
+            <p class="info__subTitle">Lido Beach</p>
+            <p class="info__text">Located on Lido Key, one half mile southwest of St. Armand's Circle, this beach has it all! More than 3,000 feet of pristine white sand, concession and gift shop, restrooms, picnic tables and a pool.</p>
+            <p class="info__subTitle">Ringling Museum</p>
+            <p class="info__text">The John and Mable Ringling Museum of Art is the state art museum of Florida, located in Sarasota, Florida. It was established in 1927 as the legacy of Mable and John Ringling for the people of Florida.</p>
+        </div>
+    </div>    
 </div>
 
 <div class="wrapper">
