--- a/app/assets/stylesheets/partials/variables.scss
+++ b/app/assets/stylesheets/partials/variables.scss
@@ -1,7 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:700);
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script);
+@import url(https://fonts.googleapis.com/css?family=Cabin);
 
 $textColor: #3e3530;
 $textBackground: #dbdecf;
 $tiffanyBlue: #0abab5;
 $font: 'Oswald', sans-serif;
+$fontContent: 'Cabin', sans-serif;
