--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,8 @@
     <span class="info__title">About Us</span>
     <div class="info__container">
         <p class="info__subTitle">How They Met</p>
-        <p class="info__text">Kristin and Corey met on a bike ride on New Years Eve in 2013.</p>
+        <p class="info__text">Kristin and Corey met on a bike ride on New Years Eve in 2013.  They enjoy long distance triathlon, getting outside, and hanging out with their two dogs, Rory and Logan.</p>
+        <p class="info__text">They love to travel and are always seeking a new adventure.</p>
     </div>
   </div>
 </div>
@@ -33,7 +34,7 @@
         <span class="info__title">Accomodations</span>
         <div class="info__container">
             <p class="info__subTitle">Hyatt Regency Sarasota</p>
-            <p class="info__text"><a href="https://resweb.passkey.com/go/LyonsMcClellandWedding">Register</a> at the Hyatt.  Limited rooms available.</p>
+            <p class="info__text"><a href="https://resweb.passkey.com/go/LyonsMcClellandWedding">Register</a> at the Hyatt.  The Hyatt is the wedding venue.  A block of rooms is available.</p>
             <p class="info__subTitle">Hotel Indigo Sarasota</p>
             <p class="info__text"><a href="http://www.srqhotel.com/">Register</a></p>
             <p class="info__subTitle">Lido Beach Resort</p>
