--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,8 +23,9 @@
     <span class="info__title">About Us</span>
     <div class="info__container">
         <p class="info__subTitle">How They Met</p>
-        <p class="info__text">Kristin and Corey met on a bike ride on New Years Eve in 2013.  They enjoy long distance triathlon, getting outside, and hanging out with their two dogs, Rory and Logan.</p>
-        <p class="info__text">They love to travel and are always seeking a new adventure.</p>
+        <p class="info__text">Kristin and Corey met on a bike ride on New Years Eve in 2013.  Together, they enjoy long distance triathlon, travelling, and hanging out with their two dogs, Rory and Logan.</p>
+        <p class="info__text">Corey proposed to Kristin after a bike ride on New Year's Eve at Lido Beach, one of their favorite places.</p>
+        <p class="info__text">They are always up for a new adventure.</p>
     </div>
   </div>
 </div>
