--- a/app/assets/stylesheets/partials/variables.scss
+++ b/app/assets/stylesheets/partials/variables.scss
@@ -2,7 +2,10 @@
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script);
 @import url(https://fonts.googleapis.com/css?family=Cabin);
 
-$textColor: #3e3530;
+//$textColor: #3e3530;
+$textColor: #002E63;
+$titleColor: #002E63;
+$subTitleColor: #002E63;
 $textBackground: #dbdecf;
 $tiffanyBlue: #0abab5;
 $font: 'Oswald', sans-serif;
