--- a/app/assets/stylesheets/partials/quote.scss
+++ b/app/assets/stylesheets/partials/quote.scss
@@ -1,4 +1,5 @@
 @import "grid";
+@import "variables";
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script);
 
 .quote {
@@ -12,4 +13,8 @@
 
 .quote--big {
   font-size: 4em;
+}
+
+.quote--navy{
+    color: $textColor;
 }
