--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="wrapper">
-  <div class="quote quote--big">
+  <div class="quote quote--big quote--navy">
     <span>Our Adventure Begins</span>
   </div>
 </div>
@@ -16,7 +16,7 @@
         <p class="schedule__subTitle">Cocktail Hour - 5 PM</p>
         <p class="schedule__text">The Cocktail Hour will commence at the end of the ceremony.  It will be located next to the Tiki Bar by the pool, adjacent to the ceremony location.</p>
         <p class="schedule__subTitle">The Reception - 6 PM</p>
-        <p class="schedule__text">The reception will be in the old Boat House restaurant.</p>
+        <p class="schedule__text">Dinner, drinks, and dancing to follow at the Boat House.</p>
     </div>
   </div>
   <div class="info">
@@ -35,11 +35,11 @@
         <span class="info__title">Accomodations</span>
         <div class="info__container">
             <p class="info__subTitle">Hyatt Regency Sarasota</p>
-            <p class="info__text"><a href="https://resweb.passkey.com/go/LyonsMcClellandWedding">Register</a> at the Hyatt.  The Hyatt is the wedding venue.  A block of rooms is available.</p>
+            <p class="info__text info__text--black"><a href="https://resweb.passkey.com/go/LyonsMcClellandWedding">Register</a> at the Hyatt.  The Hyatt is the wedding venue.  A block of rooms is available.</p>
             <p class="info__subTitle">Hotel Indigo Sarasota</p>
-            <p class="info__text"><a href="http://www.srqhotel.com/">Register</a></p>
+            <p class="info__text info__text--black"><a href="http://www.srqhotel.com/">Register</a>Modern hotel across from the Hyatt.</p>
             <p class="info__subTitle">Lido Beach Resort</p>
-            <p class="info__text"><a href="http://www.lidobeachresort.com/">Register</a></p>
+            <p class="info__text info__text--black"><a href="http://www.lidobeachresort.com/">Register</a>Resort hotel that's right on the beach.</p>
         </div>
     </div>
     <div class="info info--top">
