--- a/app/assets/stylesheets/partials/header.scss
+++ b/app/assets/stylesheets/partials/header.scss
@@ -13,7 +13,8 @@
   position: relative;
   overflow: hidden;
   text-align: right;
-  background-image: image-url('biketitle.jpg');
+  //background-image: image-url('biketitle.jpg');
+  background-image: image-url('tandem-bike2.png');
   background-position: left bottom;
   background-repeat: no-repeat;
 }
