--- a/app/assets/stylesheets/partials/header.scss
+++ b/app/assets/stylesheets/partials/header.scss
@@ -15,7 +15,7 @@
   text-align: right;
   //background-image: image-url('biketitle.jpg');
   background-image: image-url('tandem-bike2.png');
-  background-position: left bottom;
+  background-position: left -100px bottom;
   background-repeat: no-repeat;
 }
 
