--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,9 +37,9 @@
             <p class="info__subTitle">Hyatt Regency Sarasota</p>
             <p class="info__text info__text--black"><a href="https://resweb.passkey.com/go/LyonsMcClellandWedding">Register</a> at the Hyatt.  The Hyatt is the wedding venue.  A block of rooms is available.</p>
             <p class="info__subTitle">Hotel Indigo Sarasota</p>
-            <p class="info__text info__text--black"><a href="http://www.srqhotel.com/">Register</a>Modern hotel across from the Hyatt.</p>
+            <p class="info__text info__text--black"><a href="http://www.srqhotel.com/">Register</a> Modern hotel across from the Hyatt.</p>
             <p class="info__subTitle">Lido Beach Resort</p>
-            <p class="info__text info__text--black"><a href="http://www.lidobeachresort.com/">Register</a>Resort hotel that's right on the beach.</p>
+            <p class="info__text info__text--black"><a href="http://www.lidobeachresort.com/">Register</a> Resort hotel that's right on the beach.</p>
         </div>
     </div>
     <div class="info info--top">
@@ -57,7 +57,10 @@
   <div class="registry registry--top">
     <span class="registry__title">Registries</span>
     <div class="registry__container">
-      
+      <p class="registry__text">We will update the registries over the next several weeks</p>
+      <p class="registry__text"><a href="http://www.potterybarn.com/registry/3837675/registry-list.html">Pottery Barn</a></p>
+      <p class="registry__text"><a href="https://www.macys.com/wgl/registry/guest/6568545?cm_sp=EXPERIMENT-_-Registry_16B_GVR1-_-Test">Macy's</a></p>
+      <p class="registry__text"><a href="http://www.crateandbarrel.com/gift-registry/kristin-lyons-and-corey-mcclelland/r5504160">Crate and Barrel</a></p>
     </div>
   </div>
 </div>
