--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -57,7 +57,7 @@
   <div class="registry registry--top">
     <span class="registry__title">Registries</span>
     <div class="registry__container">
-      <p class="registry__text">We will update the registries over the next several weeks</p>
+      <p class="registry__text">Please donʼt feel obliged to give us a gift - all we really want is to have a lovely wedding which we can share with our friends and family. However, if you would like to give a gift and are looking for inspiration, we have set up a list of registires below.  We will update the registries over the next several weeks.</p>
       <p class="registry__text"><a href="http://www.potterybarn.com/registry/3837675/registry-list.html">Pottery Barn</a></p>
       <p class="registry__text"><a href="https://www.macys.com/wgl/registry/guest/6568545?cm_sp=EXPERIMENT-_-Registry_16B_GVR1-_-Test">Macy's</a></p>
       <p class="registry__text"><a href="http://www.crateandbarrel.com/gift-registry/kristin-lyons-and-corey-mcclelland/r5504160">Crate and Barrel</a></p>
