registry css fix

--- a/app/assets/stylesheets/partials/registry.scss
+++ b/app/assets/stylesheets/partials/registry.scss
@@ -9,7 +9,7 @@
 
 .registry__container{
   background-color: $textBackground;
-  height: 200px;
+  //height: 200px;
   border-radius: 10px;
   background-image: image-url('flower.png');
   background-position: right bottom;
