--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -54,13 +54,29 @@
 </div>
 
 <div class="wrapper">
+    <div class="photos">
+        <div class="photos__container">
+            <!-- <img data-lazy="img/lazyfonz1.png"/> -->
+            <div class="photo photo__item"><img data-lazy='<%= image_url 'photo_1_small.jpg' %>' /></div>
+            <div class="photo photo__item"><img data-lazy='<%= image_url 'photo_2_small.jpg' %>' /></div>
+            <div class="photo photo__item"><img data-lazy='<%= image_url 'photo_3_small.jpg' %>' /></div>
+            <div class="photo photo__item"><img data-lazy='<%= image_url 'photo_4_small.jpg' %>' /></div>
+            <div class="photo photo__item"><img data-lazy='<%= image_url 'photo_5_small.jpg' %>' /></div>
+            <div class="photo photo__item"><img data-lazy='<%= image_url 'photo_6_small.jpg' %>' /></div>
+            <div class="photo photo__item"><img data-lazy='<%= image_url 'photo_7_small.jpg' %>' /></div>
+            <div class="photo photo__item"><img data-lazy='<%= image_url 'photo_8_small.jpg' %>' /></div>
+        </div>
+    </div>
+</div>
+
+<div class="wrapper">
   <div class="registry registry--top">
     <span class="registry__title">Registries</span>
     <div class="registry__container">
-      <p class="registry__text">Please donʼt feel obliged to give us a gift - all we really want is to have a lovely wedding which we can share with our friends and family. However, if you would like to give a gift and are looking for inspiration, we have set up a list of registires below.  We will update the registries over the next several weeks.</p>
       <p class="registry__text"><a href="http://www.potterybarn.com/registry/3837675/registry-list.html">Pottery Barn</a></p>
       <p class="registry__text"><a href="https://www.macys.com/wgl/registry/guest/6568545?cm_sp=EXPERIMENT-_-Registry_16B_GVR1-_-Test">Macy's</a></p>
       <p class="registry__text"><a href="http://www.crateandbarrel.com/gift-registry/kristin-lyons-and-corey-mcclelland/r5504160">Crate and Barrel</a></p>
+      <p class="registry__text">We will update the registries over the next several weeks.</p>
     </div>
   </div>
 </div>
@@ -69,12 +85,35 @@
 
 <script type="text/javascript">
   $(document).ready(function(){
-    $('.slick--small').slick({
+    $('.photos__container').slick({
+      lazyLoad: 'ondemand',  
+      slidesToShow: 3,
+      slidesToScroll: 1,
       autoplay: true,
-      arrows: true
+      autoplaySpeed: 2000,
+      dots: true,
+      arrows: false,
+      infinite: true,
+      responsive: [{
+            breakpoint: 800,
+            settings: {
+                slidesToShow: 2,
+                slidesToScroll: 2,
+                dots: true,
+                infinite: true
+                
+            }
+        }, {
+            breakpoint: 480,
+            settings: {
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                dots: true
+                //infinite: true,
+                //autoplay: true,
+                //autoplaySpeed: 2000,
+            }
+        }]
     });
   });
 </script>
-
-
-<!-- accommodations, etc -->
