- changed hotel link text

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,11 +35,11 @@
         <span class="info__title">Accomodations</span>
         <div class="info__container">
             <p class="info__subTitle">Hyatt Regency Sarasota</p>
-            <p class="info__text info__text--black"><a href="https://resweb.passkey.com/go/LyonsMcClellandWedding">Register</a> at the Hyatt.  The Hyatt is the wedding venue.  A block of rooms is available.</p>
+            <p class="info__text info__text--black"><a href="https://resweb.passkey.com/go/LyonsMcClellandWedding">Click Here</a> at the Hyatt.  The Hyatt is the wedding venue.  A block of rooms is available.</p>
             <p class="info__subTitle">Hotel Indigo Sarasota</p>
-            <p class="info__text info__text--black"><a href="http://www.srqhotel.com/">Register</a> Modern hotel across from the Hyatt.</p>
+            <p class="info__text info__text--black"><a href="http://www.srqhotel.com/">Click Here</a> Modern hotel across from the Hyatt.</p>
             <p class="info__subTitle">Lido Beach Resort</p>
-            <p class="info__text info__text--black"><a href="http://www.lidobeachresort.com/">Register</a> Resort hotel that's right on the beach.</p>
+            <p class="info__text info__text--black"><a href="http://www.lidobeachresort.com/">Click Here</a> Resort hotel that's right on the beach.</p>
         </div>
     </div>
     <div class="info info--top">
